# CarND-Prediction-Lab

./: CMakeLists.txt  README.md  classifier.h  main.cpp
python/: prediction_solution.py
python/PredictionExercise/: classifier.py  prediction.py
src/: classifier.cpp  classifier.h
